[package]
name = "shader-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_shader_utils = { git = "https://github.com/rust-adventure/bevy-examples.git", branch = "main" }
bevy_panorbit_camera = "0.4.3"
itertools = "0.10.5"
