[package]
name = "shader_mountainscape"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_shader_utils = { git = "https://github.com/rust-adventure/bevy-examples.git", branch = "main" }
